--- a/package.json
+++ b/package.json
@@ -50,16 +50,16 @@
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "prettier": "2.6.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
     "express": "^4.17.2",
     "prop-types": "^15.8.1",
-    "use-sound": "^4.0.1"
+    "use-sound": "^4.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2"
   },
   "prettier": {
     "semi": false,
