--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "repository": "https://github.com/dev-academy-challenges/react-boilerplate.git",
   "main": "server/index.js",
   "scripts": {
-    "start": "run-p webpack server",
+    "build": "npm run webpack",
+    "start": "node server",
     "dev": "run-p client:watch server:watch",
     "webpack": "webpack --config client/webpack.config.js",
     "server": "node server",
@@ -51,15 +52,15 @@
     "npm-run-all": "^4.1.5",
     "prettier": "2.6.1",
     "webpack": "^5.69.1",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2"
   },
   "dependencies": {
     "express": "^4.17.2",
     "prop-types": "^15.8.1",
-    "use-sound": "^4.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2"
+    "use-sound": "^4.0.1"
   },
   "prettier": {
     "semi": false,
